# shebang

./: .gitignore  ANTI_PATTERNS.md  BEST_PRACTICES.md  BRAND.md  CHANGELOG.md  CLAUDE.md  COPYRIGHT.txt  LICENSE  METRICS.md  PHILOSOPHY.md  Package.swift  README.md  Shebang.entitlements  build-dev.sh  build.sh  dev-build.sh  index.html  mkdocs.yml  system.md  theme.yaml
.claude/: hookify.any-type.local.md  hookify.console-statements.local.md  hookify.junk-drawers.local.md  hookify.silent-exceptions.local.md  settings.json
.claude/agents/: README.md
.claude/commands/: new.md  reload.md
.claude/context/: CODE_QUALITY.md  system.md
.claude/implementation/: marketing-website-complete.md  progress.md
.claude/skills/best-practices/: SKILL.md
.shebang/: TESTING.md  TESTING_PRACTICES.md  system.md
.shebang/docs/: ARCHITECTURE_DIAGRAM.md  BRAND.md  DESIGN_SESSION_PERSISTENCE.md  FEATURES.md  ROADMAP.md  USER_GUIDE.md
.shebang/web/: features.html  git-history.html  index.html  server.py
ShebangApp/: .gitignore  build.sh
Sources/ShebangApp/: ShebangApp.swift  main.swift
Tests/: README.md
Tests/ShebangAppTests/: AttachedImageTests.swift  CommandRouterTests.swift  FileStateTests.swift  SessionStateTests.swift  SessionTests.swift  TerminalBlockTests.swift  TerminalStateTests.swift  UIStateTests.swift
agent/: TESTING_ANTIPATTERNS.md  TESTING_BY_LANGUAGE.md
docs/: BRAND.md  BUILD_LOG.md  FEATURES.md  METRICS.md  MULTI_PROJECT.md  POWER_USER_GUIDE.md  ROADMAP.md  USER_GUIDE.md  VOICE.md  index.md
docs/api/: swift.md
docs/design/: AGENTS.md
docs/research/: COMPLEXITY_COLLAPSE.md  PAPERS.md  PROGRESS.md  README.md
docs/stylesheets/: shebang.css
examples/python-example/: pyproject.toml
examples/python-example/.claude/implementation/: progress.md
examples/python-example/src/example/: __init__.py
scripts/: build-docs.sh  capture-screenshots.py  check_copyright.py  extract-swift-docs.sh  generate-charts.py  generate-metrics.sh  generate-theme.py  new-project.py  pack-shebang.sh  pre-commit-ts.sh  pre-commit.sh  reconcile-history.sh  reload.sh  security-sweep.sh  update_copyright.py
scripts/guardrails/: config.yaml  post_write.py  utils.py  validate_command.py  validate_edit.py  validate_quality.py  validate_secrets.py
templates/: CLAUDE.md  system.md
templates/python/: pyproject.toml
web/: MARKETING.md  features.html  git-history.html  index.html  marketing.html  server.py
web/data/: active_project.txt
(+77 files in other folders)
